# timekpr-next

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: debian-package.yml  debian-rpm-package.yml  main-workflow.yml  publish-release.yml  python-package.yml  remove-old-artifacts.yml
debian/: changelog  control  install  rules
resource/client/forms/: admin.glade
resource/server/: timekpr.conf
spec/: timekpr-next.spec
src/timekpr/client/: timekpra.py  timekprc.py
src/timekpr/client/admin/: adminprocessor.py
src/timekpr/client/gui/: admingui.py  clientgui.py
src/timekpr/client/interface/dbus/: administration.py  daemon.py  notifications.py
src/timekpr/client/interface/speech/: espeak.py
src/timekpr/client/interface/ui/: appindicator.py  notificationarea.py  statusicon.py
src/timekpr/common/constants/: constants.py  messages.py
src/timekpr/common/log/: log.py
src/timekpr/common/utils/: config.py  misc.py  notifications.py
src/timekpr/server/: timekprd.py
src/timekpr/server/config/: configprocessor.py  userhelper.py
src/timekpr/server/interface/dbus/: daemon.py
src/timekpr/server/interface/dbus/consolekit/: manager.py
src/timekpr/server/interface/dbus/logind/: manager.py  user.py
src/timekpr/server/user/: playtime.py  userdata.py
tests/: test_misc.py  test_paths.py
timekpr/client/: timekpra.py  timekprar.py  timekprc.py
timekpr/client/admin/: adminprocessor.py
timekpr/client/gui/: admingui.py  clientgui.py
timekpr/client/interface/dbus/: administration.py  daemon.py  notifications.py
timekpr/client/interface/remote/: administration.py  interface.py
timekpr/client/interface/speech/: espeak.py
timekpr/client/interface/ui/: notificationarea.py
timekpr/common/constants/: constants.py
timekpr/common/log/: log.py
timekpr/common/utils/: config.py  misc.py  notifications.py
timekpr/remote/: timekprrs.py
timekpr/remote/server/: web.py
timekpr/server/: timekprd.py
timekpr/server/interface/dbus/consolekit/: user.py
timekpr/server/interface/dbus/logind/: manager.py  user.py
timekpr/server/user/: playtime.py  userdata.py
